@@ -17,6 +17,7 @@ import net.minecraft.world.entity.Entity;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplate.StructureBlockInfo;
+import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
 import rbasamoyai.createbigcannons.CreateBigCannons;
 import rbasamoyai.createbigcannons.cannon_control.ControlPitchContraption;
@@ -28,6 +29,8 @@ public abstract class AbstractMountedCannonContraption extends Contraption {
 
 	protected Direction initialOrientation = Direction.NORTH;
 	protected BlockPos startPos = BlockPos.ZERO;
+	protected int backExtensionLength = 0;
+	protected int frontExtensionLength = 0;
 
 	public float maximumDepression(@Nonnull ControlPitchContraption controller) {
 		ICannonContraptionType type = this.getCannonType();
@@ -62,6 +65,7 @@ public abstract class AbstractMountedCannonContraption extends Contraption {
 	public abstract float getWeightForStress();
 
 	public void tick(Level level, PitchOrientedContraptionEntity entity) {
+		this.bounds = this.createBoundsFromExtensionLengths();
 	}
 
 	public void animate() {
@@ -84,6 +88,8 @@ public abstract class AbstractMountedCannonContraption extends Contraption {
 			tag.putString("InitialOrientation", this.initialOrientation.getSerializedName());
 		}
 		tag.putLong("LocalStartingPos", this.startPos == null ? 0L : this.startPos.asLong());
+		tag.putInt("BackExtensionLength", this.backExtensionLength);
+		tag.putInt("FrontExtensionLength", this.frontExtensionLength);
 		return tag;
 	}
 
@@ -92,6 +98,8 @@ public abstract class AbstractMountedCannonContraption extends Contraption {
 		super.readNBT(world, tag, spawnData);
 		this.initialOrientation = tag.contains("InitialOrientation", Tag.TAG_STRING) ? Direction.byName(tag.getString("InitialOrientation")) : Direction.NORTH;
 		this.startPos = BlockPos.of(tag.getLong("LocalStartingPos"));
+		this.backExtensionLength = tag.getInt("BackExtensionLength");
+		this.frontExtensionLength = tag.getInt("FrontExtensionLength");
 
 		if (world.isClientSide) return;
 		for (Map.Entry<BlockPos, StructureBlockInfo> entry : this.blocks.entrySet()) {
@@ -140,6 +148,23 @@ public abstract class AbstractMountedCannonContraption extends Contraption {
 
 	public static int getMaxCannonLength() {
 		return CBCConfigs.SERVER.cannons.maxCannonLength.get();
+	}
+
+	public AABB createBoundsFromExtensionLengths() {
+		Direction dir = this.initialOrientation();
+		dir = Direction.fromAxisAndDirection(dir.getAxis(), Direction.AxisDirection.POSITIVE);
+		Vec3 normal = new Vec3(dir.getStepX(), dir.getStepY(), dir.getStepZ());
+		if (this.entity != null)
+			normal = this.entity.applyRotation(normal, 0);
+		AABB aabb = new AABB(BlockPos.ZERO);
+		return aabb.expandTowards(normal.scale(this.frontExtensionLength + 0.5))
+			.expandTowards(normal.scale(-this.backExtensionLength - 0.5))
+			.inflate(1);
+	}
+
+	public AABB createInitialLightingBounds() {
+		Direction.Axis inflateAxis = this.initialOrientation.getAxis() == Direction.Axis.Y ? Direction.Axis.X : Direction.Axis.Y;
+		return new AABB(BlockPos.ZERO).inflate(Math.ceil(Math.sqrt(getRadius(this.getBlocks().keySet(), inflateAxis))) + 1);
 	}
 
 	public static AssemblyException cannonTooLarge() {
