@@ -1,0 +1,9 @@
+package rbasamoyai.createbigcannons.remix;
+
+import rbasamoyai.createbigcannons.cannon_control.contraption.AbstractMountedCannonContraption;
+
+public interface HasCannonLightingVolume {
+
+	void createbigcannons$setCannonContraption(AbstractMountedCannonContraption contraption);
+
+}
