@@ -4,10 +4,13 @@ Changelog
 
 Create Big Cannons 5.5.1. A few critical fixes for 5.5.0.
 
+Changes:
+- Optimized entity bounds for big cannons and autocannons to optimize lighting
 Fixes:
 - Fixed Trinkets compat crashing
 - Fixed gas mask overlay rendering as solid color when holding Just Enough Guns firearm
 - Fixed entity culling for big cannons and autocannons
+- Fixed entity lighting
 
 ===
 
